catalogs_DATA = \
	glade-palette.xml \
	gtk-base.xml \
	gtk-additional.xml \
	gtk-dialogs.xml \
	gtk-obsolete.xml
	
widgets_DATA = \
	gtkaccellabel.xml \
	gtkbox.xml \
	gtkbutton.xml \
	gtkbuttonbox.xml \
	gtkcheckbutton.xml \
	gtkcontainer.xml \
	gtkdialog.xml \
	gtkframe.xml \
	gtkhandlebox.xml \
	gtkmenubar.xml \
	gtkmessagedialog.xml \
	gtknotebook.xml \
	gtkoptionmenu.xml \
	gtkpaned.xml \
	gtkprogressbar.xml \
	gtkradiobutton.xml \
	gtkspinbutton.xml \
	gtkstatusbar.xml \
	gtktable.xml \
	gtktogglebutton.xml \
	gtktreeview.xml \
	gtktoolbar.xml \
	gtkwidget.xml \
	gtkwindow.xml

EXTRA_DIST = \
	$(catalogs_DATA) \
	$(widgets_DATA)

