catalogs_DATA = \
	glade-palette.xml \
	gtk-base.xml \
	gtk-additional.xml \
	gtk-dialogs.xml \
	gtk-obsolete.xml

widgets_DATA = \
	gtkaccellabel.xml \
	gtkbox.xml \
	gtkbutton.xml \
	gtkcheckbutton.xml \
	gtkcontainer.xml \
	gtkdialog.xml \
	gtkfixed.xml \
	gtkframe.xml \
	gtkhandlebox.xml \
	gtklabel.xml \
	gtkmenubar.xml \
	gtkmessagedialog.xml \
	gtknotebook.xml \
	gtkoptionmenu.xml \
	gtkpaned.xml \
	gtkprogressbar.xml \
	gtkradiobutton.xml \
	gtkruler.xml \
	gtkspinbutton.xml \
	gtkstatusbar.xml \
	gtktable.xml \
	gtktogglebutton.xml \
	gtktreeview.xml \
	gtktoolbar.xml \
	gtkwidget.xml \
	gtkwindow.xml

EXTRA_DIST = \
	$(catalogs_DATA) \
	$(widgets_DATA)

