install_data(
  'devhelp.png',
  'plus.png',
  'fixed-bg.png',
  'placeholder.png',
  'deprecated-16x16.png',
  'deprecated-22x22.png',
  install_dir: join_paths(get_option('datadir'), meson.project_name(), 'pixmaps')
)

install_data(
  'hicolor/scalable/apps/org.gnome.Glade.svg',
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps')
)

install_data(
  'hicolor/symbolic/apps/org.gnome.Glade-symbolic.svg',
  'hicolor/symbolic/apps/glade-brand-symbolic.svg',
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'symbolic', 'apps')
)
