smalliconsdir = $(glade_pixmapsdir)/16x16

smallicons_DATA = \
	alignment.png \
	aspectframe.png \
	accellabel.png \
	arrow.png \
	aboutdialog.png \
	button.png \
	combobox.png \
	comboboxentry.png \
	colorbutton.png \
	calendar.png \
	checkbutton.png \
	checkmenuitem.png \
	colorselection.png \
	colorselectiondialog.png \
	combo.png \
	curve.png \
	custom.png \
	clist.png \
	dialog.png \
	drawingarea.png \
	entry.png \
	eventbox.png \
	expander.png \
	fileselection.png \
	filechooserdialog.png \
	filechooserbutton.png \
	fixed.png \
	fontselection.png \
	fontbutton.png \
	fontselectiondialog.png \
	frame.png \
	gammacurve.png \
	handlebox.png \
	hbox.png \
	hbuttonbox.png \
	hpaned.png \
	hruler.png \
	hscale.png \
	hscrollbar.png \
	hseparator.png \
	iconview.png \
	image.png \
	inputdialog.png \
	imagemenuitem.png \
	label.png \
	layout.png \
	list.png \
	listitem.png \
	menu.png \
	menuitem.png \
	menutoolbutton.png \
	menubar.png \
	messagedialog.png \
	notebook.png \
	optionmenu.png \
	progressbar.png \
	radiobutton.png \
	radiomenuitem.png \
	radiotoolbutton.png \
	ruler.png \
	scrolledwindow.png \
	spinbutton.png \
	statusbar.png \
	separatormenuitem.png \
	separatortoolitem.png \
	table.png \
	textview.png \
	togglebutton.png \
	toolbar.png \
	treeview.png \
	toolitem.png \
	toolbutton.png \
	toggletoolbutton.png \
	vbox.png \
	vbuttonbox.png \
	viewport.png \
	vpaned.png \
	vruler.png \
	vscale.png \
	vscrollbar.png \
	vseparator.png \
	window.png

if BUILD_GNOME
smallicons_DATA += bonobodock.png \
	bonobodockitem.png \
	gnomehref.png \
	gnomeapp.png \
	gnomeappbar.png \
	gnomecanvas.png \
	gnomedateedit.png \
	gnomeiconentry.png \
	gnomeiconselection.png \
	gnomedruid.png \
	gnomedruidpageedge.png \
	gnomedruidpagestandard.png \
	gnomepixmap.png \
	gnomepropertybox.png \
	gnomecolorpicker.png \
	gnomepixmapentry.png \
	gnomeabout.png \
	gnomeentry.png \
	gnomeappbar.png \
	gnomedialog.png \
	gnomefileentry.png \
	gnomefontpicker.png \
	gnomeiconlist.png \
	gnomemessagebox.png
endif

EXTRA_DIST = $(smallicons_DATA)
