largeiconsdir = $(glade_pixmapsdir)/22x22

largeicons_DATA = \
	alignment.png \
	aspectframe.png \
	accellabel.png \
	arrow.png \
	aboutdialog.png \
	button.png \
	combobox.png \
	comboboxentry.png \
	colorbutton.png \
	calendar.png \
	checkbutton.png \
	checkmenuitem.png \
	colorselection.png \
	colorselectiondialog.png \
	combo.png \
	curve.png \
	custom.png \
	clist.png \
	dialog.png \
	drawingarea.png \
	entry.png \
	eventbox.png \
	expander.png \
	fileselection.png \
	filechooserdialog.png \
	filechooserbutton.png \
	fixed.png \
	fontselection.png \
	fontbutton.png \
	fontselectiondialog.png \
	frame.png \
	gammacurve.png \
	handlebox.png \
	hbox.png \
	hbuttonbox.png \
	hpaned.png \
	hruler.png \
	hscale.png \
	hscrollbar.png \
	hseparator.png \
	iconview.png \
	image.png \
	imagemenuitem.png \
	inputdialog.png \
	label.png \
	layout.png \
	list.png \
	listitem.png \
	menu.png \
	menuitem.png \
	menubar.png \
	menutoolbutton.png \
	messagedialog.png \
	notebook.png \
	optionmenu.png \
	progressbar.png \
	radiobutton.png \
	ruler.png \
	radiomenuitem.png \
	radiotoolbutton.png \
	scrolledwindow.png \
	spinbutton.png \
	statusbar.png \
	separatormenuitem.png \
	separatortoolitem.png \
	table.png \
	textview.png \
	togglebutton.png \
	toolbar.png \
	treeview.png \
	toolitem.png \
	toolbutton.png \
	toggletoolbutton.png \
	vbox.png \
	vbuttonbox.png \
	viewport.png \
	vpaned.png \
	vruler.png \
	vscale.png \
	vscrollbar.png \
	vseparator.png \
	window.png

if BUILD_GNOME
largeicons_DATA += bonobodockitem.png \
	gnomecanvas.png \
	gnomedruidpageedge.png \
	gnomefontpicker.png \
	gnomepixmap.png \
	bonobodock.png \
	gnomecolorpicker.png \
	gnomedruidpagestandard.png \
	gnomehref.png \
	gnomepixmapentry.png \
	gnomeabout.png \
	gnomedruid.png \
	gnomeiconentry.png \
	gnomeiconselection.png \
	gnomeapp.png \
	gnomedateedit.png \
	gnomeentry.png \
	gnomeiconlist.png \
	gnomeappbar.png \
	gnomedialog.png \
	gnomefileentry.png \
	gnomemessagebox.png \
	gnomepropertybox.png
endif

EXTRA_DIST = $(largeicons_DATA)
